--- a/src/ui/control/EmojiListDialog.css
+++ b/src/ui/control/EmojiListDialog.css
@@ -1,7 +1,4 @@
 .emoji-list-dialog .help {
     color: var(--bs-gray-600);
-}
-
-.emoji-list-dialog .help .marker {
-    color: var(--bs-primary);
+    text-align: end;
 }
