Alignment on mobile.

--- a/src/ui/control/dropdownmenu/MenuButton.css
+++ b/src/ui/control/dropdownmenu/MenuButton.css
@@ -6,6 +6,12 @@
     height: 2.1em;
 }
 
+@media only screen and (max-width: 575px) {
+    .menu-button {
+        padding: .25em .4em;
+    }
+}
+
 .menu-button svg {
     vertical-align: -.1em;
 }
