--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -49,6 +49,12 @@
     vertical-align: .25em;
 }
 
+@media only screen and (max-width: 575px) {
+    #page-header H2 .subscribe-button {
+        vertical-align: .1em;
+    }
+}
+
 #page-header > .btn {
     margin-left: .5rem;
 }
