Move the donation button in <NodeCard> where the mention button was previously.

--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -78,6 +78,7 @@
 
 .node-card .buttons {
     margin-top: .75em;
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
     width: 100%;
 }
