--- a/src/ui/profile/view/NodeNameView.css
+++ b/src/ui/profile/view/NodeNameView.css
@@ -11,13 +11,6 @@
     display: inline;
     border: 0;
     background: transparent;
-}
-
-.node-name-view .menu .chevron {
-    color: var(--bs-gray-500);
-    cursor: pointer;
-}
-
-.node-name-view .menu .chevron:hover {
-    color: var(--bs-gray-800);
+    position: relative;
+    top: .1em;
 }
