--- a/src/ui/control/subscribebutton/SubscribeButton.css
+++ b/src/ui/control/subscribebutton/SubscribeButton.css
@@ -18,7 +18,7 @@
     color: var(--primary-800);
 }
 
-.subscribe-button SPAN.status.blocked {
+.subscribe-button .status.blocked {
     color: var(--bs-danger);
     background-color: var(--bs-danger-bg-subtle);
     border-color: transparent;
