CSS utility for a border of color var(--primary-600). Use dropdown-menu style for <DraftSelector> instead of popover.

--- a/src/ui/control/dropdownmenu/DropdownMenu.css
+++ b/src/ui/control/dropdownmenu/DropdownMenu.css
@@ -20,3 +20,7 @@
 .dropdown-menu A.dropdown-item:hover {
     text-decoration: none;
 }
+
+.border-primary-600 {
+    border-color: var(--primary-600);
+}
