--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -29,7 +29,7 @@
     --body-background: var(--bs-gray-200);
     --highlight: rgba(0, 0, 0, .05);
     --highlight-light: rgba(0, 0, 0, .025);
-    --highlight-blue: rgba(0, 123, 255, .1);
+    --highlight-blue: rgba(0, 123, 255, .1); /* TODO need to change after changing primary color */
     --highlight-red: rgba(220, 53, 69, .1);
     --highlight-cyan: #f0fafa;
     --highlight-primary: var(--highlight-blue);
