--- a/src/ui/people/PeopleTabs.css
+++ b/src/ui/people/PeopleTabs.css
@@ -1,30 +1,3 @@
-@media only screen and (min-width: 576px) {
-    .people-tabs {
-        min-width: 15%;
-        max-width: 20%;
-        flex: none;
-        margin-right: 1rem;
-    }
-}
-
-@media only screen and (max-width: 575px) {
-    .people-tabs {
-        margin-bottom: 1rem;
-    }
-}
-
-.people-tabs .nav-link {
-    display: flex;
-    align-items: flex-start;
-}
-
-.people-tabs .title {
-    flex: auto;
-}
-
-.people-tabs .badge {
-    flex: none;
-    background-color: var(--bs-gray-500);
-    margin-top: .2em;
-    margin-left: .75em;
+.people-tabs.nav.nav-pills {
+    --bs-nav-pills-border-radius: 2rem;
 }
