--- a/src/ui/people/PeopleSelectionPanel.css
+++ b/src/ui/people/PeopleSelectionPanel.css
@@ -1,3 +1,17 @@
 .people-panel {
     margin-bottom: 1.5rem;
+    --bs-border-radius: .75rem;
+    --bs-border-radius-sm: .75rem;
+}
+
+.people-panel .search {
+    flex: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+
+@media only screen and (min-width: 576px) {
+    .people-panel .search .input-group {
+        max-width: 250px;
+    }
 }
