--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -1,22 +1,26 @@
 #instants .instant {
     display: grid;
-    grid-template: auto min-content min-content / calc(40px + .25rem) auto 1.5em;
-    border-bottom: 1px solid var(--bs-gray-200);
+    grid-template-rows: [header-start] auto [header-end buttons-start] min-content [buttons-end date-start] min-content [date-end];
+    grid-template-columns: [avatar] calc(40px + .75rem) [summary] auto [sidebar] 1.5em [end];
     overflow-wrap: anywhere;
-    padding: .2rem .5rem;
+    padding: .5rem 1rem;
+    border-radius: .5rem;
     min-height: 5em;
+    margin-bottom: .25rem;
+}
+
+@media only screen and (max-width: 575px) {
+    #instants .instant {
+        grid-template-columns: [avatar] calc(40px + .75rem) [summary] auto [sidebar end];
+    }
 }
 
 #instants .instant.unread {
-    background-color: var(--highlight-cyan);
+    background-color: var(--primary-50);
 }
 
 #instants .instant:hover, #instants .instant.unread:hover {
     background-color: var(--highlight);
-}
-
-#instants .instant.last-new {
-    border-bottom: 1px solid var(--bs-green);
 }
 
 #instants .instant A.outer {
@@ -26,29 +30,29 @@
     z-index: var(--zindex-text-overlay);
 }
 
-#instants .instant A.cells-all {
-    grid-row: 1 / 3;
-    grid-column: 1 / 3;
-}
-
 #instants .instant A.cells-avatar {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
+    grid-row: header-start / date-end;
+    grid-column: avatar / summary;
 }
 
 #instants .instant A.cells-summary {
-    grid-row: 1 / 3;
-    grid-column: 2 / 3;
+    grid-row: header-start / header-end;
+    grid-column: summary / sidebar;
+}
+
+#instants .instant A.cells-date {
+    grid-row: date-start / date-end;
+    grid-column: summary / sidebar;
 }
 
 #instants .instant .summary-avatar {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
+    grid-row: header-start / date-end;
+    grid-column: avatar / summary;
 }
 
 #instants .instant .summary {
-    grid-row: 1 / 2;
-    grid-column: 2 / 3;
+    grid-row: header-start / header-end;
+    grid-column: summary / sidebar;
 }
 
 #instants .instant .summary .instant-icon {
@@ -57,9 +61,9 @@
 }
 
 #instants .instant .footer {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    margin-top: .3em;
+    grid-row: date-start / date-end;
+    grid-column: summary / sidebar;
+    margin-top: .1em;
 }
 
 #instants .instant .footer .date {
@@ -67,14 +71,18 @@
 }
 
 #instants .instant .buttons {
-    grid-row: 3 / 4;
-    grid-column: 2 / 3;
-    margin-top: .3em;
-    margin-bottom: .3em;
+    grid-row: buttons-start / buttons-end;
+    grid-column: summary / sidebar;
+    margin-top: .375em;
+    margin-bottom: .375em;
+}
+
+#instants .instant .buttons .btn {
+    --bs-btn-border-radius: .5rem;
 }
 
 #instants .instant .buttons BUTTON:not(:last-child) {
-    margin-right: .3em;
+    margin-right: .5rem;
 }
 
 #instants .instant .buttons .message {
@@ -83,22 +91,23 @@
 
 #instants .instant .buttons .message .check {
     margin-right: .25em;
-    color: var(--bs-success);
+    vertical-align: .05em;
 }
 
 #instants .instant .sidebar {
-    grid-row: 1 / 3;
-    grid-column: 3 / 4;
+    grid-row: header-start / date-end;
+    grid-column: sidebar / end;
     place-self: center;
     padding: .5em;
-    color: var(--bs-cyan);
-    visibility: hidden;
-}
-
-#instants .instant:hover .sidebar {
-    visibility: visible;
+    color: var(--primary-600);
 }
 
 #instants .instant:hover .sidebar .envelope {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 575px) {
+    #instants .instant .sidebar {
+        display: none;
+    }
 }
