--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -1,44 +1,66 @@
 .instant-popover {
-    width: 25rem;
+    width: 28rem;
 }
 
 @media only screen and (max-width: 575px) {
     .instant-popover {
-        box-shadow: 0 -4px 5px 0 rgba(0, 0, 0, .14),
-                    0 -1px 10px 0 rgba(0, 0, 0, .12),
-                    0 -2px 4px -1px rgba(0, 0, 0, .2)
+        width: 100vw;
     }
 }
 
 #instants {
     font-size: .835rem;
-    margin-left: -.75rem;
-    margin-right: -.75rem;
 }
 
 #instants .header {
-    padding: 0 .75rem;
-    border-bottom: 1px solid var(--bs-gray-400);
+    padding: 0 0 .8rem 0;
+    border-bottom: 1px solid var(--bs-gray-100);
+    margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
 }
 
 #instants .header .title {
-    font-weight: bold;
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.2;
+}
+
+#instants .header .close {
+    display: block;
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-top: -.25rem;
+    border: 0;
+    background-color: transparent;
+    border-radius: 50%;
+    color: var(--bs-gray-600);
+}
+
+#instants .header .close:hover {
+    background-color: var(--highlight);
 }
 
 #instants > .footer {
     padding-top: .25rem;
     padding-left: .75rem;
     padding-right: .75rem;
+    margin-top: 1rem;
     margin-bottom: -.25rem;
-    border-top: 1px solid var(--bs-gray-400);
+    border-top: 1px solid var(--bs-gray-100);
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+
+#instants .build-number {
+    color: var(--bs-gray-500);
+    font-size: .7rem;
+    align-self: flex-end;
 }
 
 #instants .action {
-    color: var(--bs-blue);
+    color: var(--secondary-600);
+    font-size: 1rem;
     cursor: pointer;
 }
 
@@ -46,17 +68,15 @@
     text-decoration: underline;
 }
 
-#instants .build-number {
-    color: var(--bs-gray-400);
-    font-size: .7rem;
-    position: relative;
-    top: .5em;
-    left: .5rem;
-}
-
 #instants .content {
     max-width: 800px;
     max-height: 70vh;
     overflow-y: auto;
     overscroll-behavior-y: none;
+}
+
+#instants .content HR {
+    border-color: var(--bs-gray-500);
+    margin-top: .25rem;
+    margin-bottom: .25rem;
 }
