--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -1,5 +1,6 @@
 .instant-popover {
     width: 28rem;
+    border-top: 1px solid var(--bs-gray-300);
 }
 
 @media only screen and (max-width: 575px) {
