Text selection on tabs makes scrolling on mobile tricky.

--- a/src/ui/control/Tabs.css
+++ b/src/ui/control/Tabs.css
@@ -26,6 +26,7 @@
 
 .nav.nav-tabs .nav-item, .nav.nav-pills .nav-item {
     text-wrap: nowrap;
+    user-select: none;
 }
 
 .nav.nav-tabs.scroll, .nav.nav-pills.scroll {
