New design of postings.

--- a/src/ui/control/PrincipalSelect.css
+++ b/src/ui/control/PrincipalSelect.css
@@ -6,7 +6,7 @@
     display: block;
     font-size: .8rem;
     background-color: transparent;
-    padding: .1rem .2rem;
+    padding: 0 .2rem;
     border-color: transparent;
     border-radius: .4rem;
 }
