--- a/src/ui/posting/PostingButtons.css
+++ b/src/ui/posting/PostingButtons.css
@@ -1,12 +1,22 @@
 .posting-buttons {
     display: flex;
     position: relative;
-    border-top: 1px solid var(--bs-gray-400);
-    padding-top: .5rem;
-    margin-top: .7rem;
+    border-top: 1px solid var(--bs-gray-200);
+    padding-top: .875rem;
+    margin-top: .75rem;
+}
+
+@media only screen and (max-width: 575px) {
+    .posting-buttons {
+        padding-top: .625rem;
+    }
 }
 
 .posting-buttons.with-menu {
     padding-right: 1.8rem;
     min-height: 1.5em;
+}
+
+.posting-buttons .divider {
+    flex: auto;
 }
