--- a/src/ui/story/StoryDate.css
+++ b/src/ui/story/StoryDate.css
@@ -1,4 +1,5 @@
 .posting > .owner-line .date {
-    font-size: 0.8rem;
-    color: var(--bs-gray-500);
+    font-size: .75rem;
+    color: var(--bs-gray-600);
+    line-height: 133%;
 }
