--- a/src/ui/control/ReactionTotals.css
+++ b/src/ui/control/ReactionTotals.css
@@ -37,7 +37,7 @@
     border-radius: 1em;
     font-size: 1.3em;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, .12);
-    padding: .3em .5em;
+    padding: .45em .5em .5em .5em;
 }
 
 .reactions .senior-positive:hover, .reactions .senior-negative:hover {
