--- a/src/ui/entry/EntryLinkPreview.css
+++ b/src/ui/entry/EntryLinkPreview.css
@@ -21,14 +21,16 @@ DIV.link-preview {
 @media only screen and (max-width: 575px) {
     A.link-preview, DIV.link-preview {
         display: flex;
-        margin-left: -.5rem;
-        margin-right: -.5rem;
     }
     A.link-preview {
         width: 99.6vw;
+        margin-left: -1rem;
+        margin-right: -1rem;
     }
     DIV.link-preview {
         width: calc(99.6vw - 1rem);
+        margin-left: -.5rem;
+        margin-right: -.5rem;
     }
 }
 
