--- a/src/ui/compose/ComposePreviewDialog.css
+++ b/src/ui/compose/ComposePreviewDialog.css
@@ -6,4 +6,11 @@
     max-height: calc(100vh - 16rem);
     overflow-y: auto;
     overscroll-behavior-y: none;
+    --feed-width: calc(var(--bs-modal-width) - var(--bs-modal-padding) * 2);
+}
+
+@media only screen and (max-width: 575px) {
+    .compose-preview-dialog .modal-body {
+        --feed-width: calc(100vw + 1.5rem - var(--bs-modal-padding) * 2 - var(--bs-modal-margin) * 2);
+    }
 }
