--- a/src/ui/posting/PostingSource.css
+++ b/src/ui/posting/PostingSource.css
@@ -1,5 +1,6 @@
 A.posting-source {
     color: var(--bs-gray-500);
+    margin-left: -.1em;
     margin-right: .3em;
     position: relative;
     top: -.1em;
