--- a/src/ui/comment/compose/CommentCompose.css
+++ b/src/ui/comment/compose/CommentCompose.css
@@ -1,3 +1,7 @@
+#comments:empty ~ #comment-compose {
+    margin-top: 2rem;
+}
+
 @media only screen and (max-width: 575px) {
     #comment-compose {
         margin-bottom: 3rem;
