--- a/src/ui/comment/CommentButton.css
+++ b/src/ui/comment/CommentButton.css
@@ -6,16 +6,22 @@
     border: none;
     border-radius: .5em;
     font-size: .75rem;
+    transition: background-color, color .15s ease-in;
 }
 
 .comment-button:hover, A.comment-button:hover {
     color: var(--bs-gray-800);
     background-color: var(--highlight);
+    transition: background-color, color .15s ease-in;
 }
 
 @media only screen and (min-width: 576px) {
     .comment-button, A.comment-button {
         margin-right: .3rem;
+    }
+
+    .comment-button.invisible, A.comment-button.invisible {
+        display: none;
     }
 
     .comment-button .caption, A.comment-button .caption {
