New design of GlanceComment. Do not open the GlanceComment popup when hovering the author's name.

--- a/src/ui/comment/CommentOwner.css
+++ b/src/ui/comment/CommentOwner.css
@@ -15,7 +15,7 @@
     color: var(--bs-gray-900);
 }
 
-.comment.topic-starter .owner > A {
+.comment.topic-starter > .owner-line .owner > A {
     color: var(--primary-800);
 }
 
