New design of comments in search results.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -5,6 +5,14 @@
     width: 100%;
 }
 
+.comment-panel {
+    border-radius: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 1.5rem 1.5rem 1rem 1.5rem;
+    background-color: white;
+}
+
 .comment > .menu {
     top: .05rem;
     right: -.25rem;
