--- a/src/ui/comment/CommentVisibility.css
+++ b/src/ui/comment/CommentVisibility.css
@@ -1,8 +1,8 @@
 .comment .owner-line .visibility {
     color: var(--bs-gray-500);
-    padding-left: .4rem;
+    padding-right: .4rem;
 }
 
 .comment .owner-line .visibility .principal {
-    margin-left: .4rem;
+    margin-right: .4rem;
 }
