--- a/src/ui/control/Button.css
+++ b/src/ui/control/Button.css
@@ -16,3 +16,18 @@
     --bs-btn-disabled-bg: var(--bs-gray-100);
     --bs-btn-disabled-border-color: var(--bs-gray-100);
 }
+
+.btn-silent {
+    --bs-btn-color: var(--bs-gray-700);
+    --bs-btn-bg: transparent;
+    --bs-btn-border-color: transparent;
+    --bs-btn-hover-color: var(--bs-gray-900);
+    --bs-btn-hover-bg: var(--highlight);
+    --bs-btn-hover-border-color: var(--highlight);
+    --bs-btn-active-color: var(--bs-gray-700);
+    --bs-btn-active-bg: transparent;
+    --bs-btn-active-border-color: var(--bs-gray-700);
+    --bs-btn-disabled-color: var(--bs-gray-400);
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: transparent;
+}
