--- a/src/ui/control/FeedTopBox.css
+++ b/src/ui/control/FeedTopBox.css
@@ -16,6 +16,8 @@
 @media only screen and (max-width: 575px) {
     .feed-top-box {
         bottom: -2.2rem;
+        margin: 0 3.5rem;
+        width: calc(100% - 7rem); /* to make place for "go to bottom" button */
     }
 }
 
