--- a/src/ui/settings/SettingsButtons.css
+++ b/src/ui/settings/SettingsButtons.css
@@ -1,8 +1,18 @@
 .settings-buttons {
+    grid-column: 2 / 4;
+    grid-row: 4;
     text-align: right;
-    padding-top: 0.5rem;
+    padding-top: 1.5rem;
 }
 
 .settings-buttons BUTTON {
     margin-left: 1em;
+    width: 8rem;
+}
+
+@media only screen and (max-width: 575px) {
+    .settings-buttons BUTTON {
+        margin-left: 1em;
+        width: 9.4rem;
+    }
 }
