--- a/src/ui/settings/SettingsMenu.css
+++ b/src/ui/settings/SettingsMenu.css
@@ -1,3 +1,16 @@
+.settings-menu {
+    grid-column: 1;
+    grid-row: 3 / 5;
+    width: calc(100% - 3rem);
+    --bs-nav-link-color: var(--bs-gray-900);
+    --bs-nav-link-hover-color: var(--bs-gray-900);
+    --bs-nav-link-disabled-color: var(--bs-gray-400);
+    --bs-nav-pills-link-active-color: var(--bs-gray-900);
+    --bs-nav-pills-link-active-bg: var(--bs-gray-200);
+    --nav-pills-link-hover-bg: var(--bs-gray-100);
+    --nav-pills-link-active-hover-bg: var(--bs-gray-200);
+}
+
 @media only screen and (max-width: 575px) {
     .settings-menu {
         margin-bottom: 1.5rem;
